Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignTextObjInteger.quorum
Text t = cast(Text, 5)
t:GetValue()