Quorum3/Library/Tests/TypeChecker/Fail/ImpAssignIntegerTextObj.quorum
Text t
t:setValue("t")
integer i = t;